--- a/day1/CW/styles.css
+++ b/day1/CW/styles.css
@@ -55,6 +55,10 @@ h2 {
   font-family: Impact, serif;
 }
 
+article {
+  display: flex;
+}
+
 .item p {
   display: inline-block;
   margin-top: 5px;
