--- a/Projests/Landing-page-HTML-CSS/styles.css
+++ b/Projests/Landing-page-HTML-CSS/styles.css
@@ -1172,12 +1172,16 @@ footer .copyright {
 }
 
 @media screen and (max-width: 500px) {
+  nav img {
+    height: 2rem;
+  }
+
   .home h1 {
     font-size: 2rem;
   }
 
   .home p {
-    font-size: 0.6rem;
+    font-size: 1rem;
     width: 50%;
   }
 
